--- a/.gitignore
+++ b/.gitignore
@@ -473,3 +473,7 @@ server
 supported_c_compilers.txt
 supported_cxx_compilers.txt
 sanitizers.txt
+a-flagprobe_APJmhb.gcno
+a-flagprobe_NjRQOl.gcno
+a-test_src_AboVGa.gcno
+a-test_src_Kf3zP0.gcno
